--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body{
-
+    background: #1e1f24;
     color: #333;
     text-align: center;
-    font-family: "Courier" ;
+    font-family: "Arial" ;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -33,4 +33,9 @@ body{
 #container h1
 {
 font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
